--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_host = "mongodb://localhost:27017"
+DB_host = "mongodb+srv://lucasMeregali:AnOiTeCeR1@cluster0.lm21q6d.mongodb.net/"
 DB_DATABASE = "chat"
 
 API_PORT = 5000
